refactor: replace Path.of with Paths.get for improved Java version compatibility